k8s/namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-waste
  labels:
    name: smart-waste
    environment: production
